Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.1, Qt Creator 3.3.2, Qt Creator 3.4.0-beta1, Qt Creator 3.5.0-beta1
-
None
Description
Repeat:
- Work on a git project,
- If somehow you manage to have a merge conflict in a .qrc file,
- Then QtC hides it from the tree,
- Then try File->Open File or project, open your .qrc file, you get a blank dialog with zero useful information
- The you go to: File -> Open File with..., try to open the .qrc with the resource editor. You get the same blank dialog with zero useful information.
I know it is corrupted, but if you manage to corrupt it you dont get any clue about it. At least say:
"The file is corrupted, it will open it with the Plain Editor [OK] "
Then open it with the plain editor.
Attachments
For Gerrit Dashboard: QTCREATORBUG-14064 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
110071,2 | ResourceEditor: Show correct error message on opening a invalid qrc file | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
110072,2 | EditorManager: Don't show a empty error message | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
110073,8 | EditorManager: If opening a editor fails, offer other editors factories | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |