ResourceEditor: Show correct error message on opening a invalid qrc file

Change-Id: I46310f9305b94bc0e4ac9a1708daa079b3245788
Task-number: QTCREATORBUG-14064
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>